tests/miniJava/neg/000114_mutation.MiniJava
class java { public length static void Main ( String [ ] java ) { { } } }
